bugs in cart hover and vision misson jumping issue

--- a/src/About/About.css
+++ b/src/About/About.css
@@ -1596,10 +1596,10 @@
   /*transition: all 0.4s ease-in-out; */
 }
 
-.value-card:hover {
-  /*transform: translateY(-5px) scale(1.05); */
+/*.value-card:hover {
+  transform: translateY(-5px) scale(1.05); 
   box-shadow: 0 20px 40px rgba(255, 102, 0, 0.4);
-} 
+}  */
 
 .value-icon {
   font-size: 2.5rem;
